--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.SplashActivity" android:theme="">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".GalleryActivity">
-        </activity>
-        <activity android:name=".CollToolbarActivity">
-        </activity>
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.GalleryActivity" />
+        <activity android:name=".activities.CollToolbarActivity" />
+
     </application>
 
 </manifest>
