--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashActivity" android:theme="">
+        <activity
+            android:name=".activities.SplashActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.GalleryActivity" />
-        <activity android:name=".activities.CollToolbarActivity" />
-
+        <activity android:name=".activities.LoginActivity"/>
+        <activity android:name=".activities.GalleryActivity"/>
+        <activity android:name=".activities.CollToolbarActivity"/>
+        <activity android:name=".activities.BaseAsyncActivity">
+        </activity>
     </application>
 
 </manifest>
