Added splashscreen style

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.LoginActivity"/>
-        <activity android:name=".activities.GalleryActivity"/>
-        <activity android:name=".activities.CollToolbarActivity"
+        <activity android:name=".activities.GalleryActivity"
                   android:parentActivityName=".activities.DashboardActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.DashboardActivity"/>
-        </activity>
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".activities.DashboardActivity"/>
+       </activity>
+        <activity android:name=".activities.CollToolbarActivity"/>
         <activity android:name=".activities.DashboardActivity"></activity>
     </application>
 
