Added drawer activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,16 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
 
     //Dagger 2  og
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.dagger:dagger:2.11'
-    compile 'com.google.dagger:dagger-android:2.11'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+    //compile 'com.android.support:appcompat-v7:26.+'
+    //compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //compile 'com.google.dagger:dagger:2.11'
+    //compile 'com.google.dagger:dagger-android:2.11'
+    //annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    //annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
+    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:design:26.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     provided 'javax.annotation:jsr250-api:1.0'
 }
