--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,18 @@
         <activity android:name=".activities.LoginActivity"/>
         <activity
             android:name=".activities.GalleryActivity"
-            android:parentActivityName=".activities.DashboardActivity">
+            android:parentActivityName=".activities.HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.DashboardActivity"/>
+                android:value=".activities.HomeActivity"/>
         </activity>
         <activity android:name=".activities.CollToolbarActivity"/>
         <activity
             android:name=".activities.HomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".activities.ServicesActivity">
         </activity>
     </application>
 
