Fixed project structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
 
         <activity android:name=".activities.ProfileActivity">
         </activity>
+        <activity android:name=".activities.FindUsActivity">
+        </activity>
+        <activity android:name=".activities.MessagesActivity">
+        </activity>
     </application>
 
 </manifest>
