--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     apply plugin: 'com.google.gms.google-services'
 
+    compile 'com.android.support:cardview-v7:23.1.1'
 
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
