--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,18 @@
                 android:value=".activities.HomeActivity"/>
         </activity>
 
+        <activity android:name=".activities.ProfileActivity">
+        </activity>
+        <activity android:name=".activities.FindUsActivity">
+        </activity>
+        <activity android:name=".activities.MessagesActivity"
+                  android:parentActivityName=".activities.HomeActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.HomeActivity"/>
+        </activity>
+
         <!-- Services -->
 
 
@@ -61,12 +73,6 @@
                 android:resource="@xml/file_provider_paths"/>
         </provider>
 
-        <activity android:name=".activities.ProfileActivity">
-        </activity>
-        <activity android:name=".activities.FindUsActivity">
-        </activity>
-        <activity android:name=".activities.MessagesActivity">
-        </activity>
     </application>
 
 </manifest>
