Added services list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,8 @@
 
         <activity android:name=".activities.DiagnosticsActivity">
         </activity>
+        <activity android:name=".activities.ServicesListActivity">
+        </activity>
     </application>
 
 </manifest>
