--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LoginActivity"/>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.GalleryActivity"
             android:parentActivityName=".activities.HomeActivity">
@@ -82,6 +84,8 @@
         <activity android:name=".activities.SettingsActivty">
         </activity>
         <activity android:name=".activities.ForgotPasswordActivity">
+        </activity>
+        <activity android:name=".activities.AskActivity">
         </activity>
     </application>
 
