--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,24 +29,24 @@
             android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.GalleryActivity"
-            android:parentActivityName=".activities.HomeActivity">
+            android:parentActivityName=".activities.DashBoardActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.HomeActivity"/>
+                android:value=".activities.DashBoardActivity"/>
         </activity>
         <activity android:name=".activities.CollToolbarActivity"/>
         <activity
-            android:name=".activities.HomeActivity"
+            android:name=".activities.DashBoardActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
             android:name=".activities.ServicesActivity"
-            android:parentActivityName=".activities.HomeActivity"
+            android:parentActivityName=".activities.DashBoardActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.HomeActivity"/>
+                android:value=".activities.DashBoardActivity"/>
         </activity>
         <activity android:name=".activities.ProfileActivity">
         </activity>
@@ -54,11 +54,11 @@
         </activity>
         <activity
             android:name=".activities.MessagesActivity"
-            android:parentActivityName=".activities.HomeActivity"
+            android:parentActivityName=".activities.DashBoardActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.HomeActivity"/>
+                android:value=".activities.DashBoardActivity"/>
         </activity>
 
         <!-- Services -->
