pre registration commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
         </activity>
         <activity android:name=".activities.ServicesListActivity">
         </activity>
-        <activity android:name=".activities.RegistrationActivity">
+        <activity android:name=".activities.RegistrationActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".activities.SettingsActivty">
         </activity>
