--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -26,8 +27,8 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".activities.GalleryActivity"
             android:parentActivityName=".activities.DashBoardActivity">
@@ -80,14 +81,17 @@
         </activity>
         <activity android:name=".activities.ServicesListActivity">
         </activity>
-        <activity android:name=".activities.RegistrationActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".activities.RegistrationActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".activities.SettingsActivty">
         </activity>
         <activity android:name=".activities.ForgotPasswordActivity">
         </activity>
         <activity android:name=".activities.AskActivity">
+        </activity>
+        <activity android:name=".activities.ReferralActivity">
         </activity>
     </application>
 
