--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -92,6 +91,9 @@
         <activity android:name=".activities.AskActivity">
         </activity>
         <activity android:name=".activities.ReferralActivity">
+        </activity>
+        <activity android:name=".activities.FirstTimeActivity"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
