--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
         <activity android:name=".activities.ReferralActivity">
         </activity>
         <activity android:name=".activities.FirstTimeActivity"
-                  android:theme="@style/AppTheme.NoActionBar">
+                  android:theme="@style/SplashTheme">
         </activity>
     </application>
 
